--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,4 +8,4 @@ scrape_configs:
   - job_name: 'http-client-battle'
     honor_labels: true
     static_configs:
-      - targets: ['172.24.40.97:9091']
+      - targets: ['xxx.xxx.xxx.xxx:9091']
